--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title> sign up </title>
+    <link relevance="stylesheet" href="signup.css">
+  </head>
+<body>
+</body>
+</html>
+  
+   
